# vcf2maf-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vcf2maf_py/: __init__.py  __main__.py  annotation.py  cli.py  constants.py  converter.py  maf2vcf.py  utils.py  vcf_reader.py
tests/: conftest.py  test_allele.py  test_annotation.py  test_callers.py  test_cli.py  test_converter.py  test_edge_cases.py  test_maf2vcf.py  test_maf_input.py  test_multi_transcript.py  test_vcf_reader.py
tests/data/: test_callers.vcf  test_edge_cases.vcf  test_minimal.maf  test_multi_transcript.vcf  test_snpeff.vcf  test_tumor_only.vcf  test_unannotated.vcf  test_vep.vcf
